force-app/main/default/objects/Case/fields/CBS_Group_Mail_Notified__c.field-meta.xml
<CustomField>
    <fullName>CBS_Group_Mail_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CBS组邮箱已通知</label>
    <type>Checkbox</type>
</CustomField>