force-app/main/default/objects/Case/fields/Client_Notified__c.field-meta.xml
<CustomField>
    <fullName>Client_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>通知客户端</label>
    <type>Checkbox</type>
</CustomField>