force-app/main/default/objects/Case/fields/Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Completed_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>完成时间</label>
    <type>DateTime</type>
</CustomField>