force-app/main/default/objects/Case/fields/Completion_Notified__c.field-meta.xml
<CustomField>
    <fullName>Completion_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>完成通知已发送</label>
    <type>Checkbox</type>
</CustomField>