force-app/main/default/objects/Case/fields/Consent_Batch_Reference__c.field-meta.xml
<CustomField>
    <fullName>Consent_Batch_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>唯一链接批次ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>