force-app/main/default/objects/Case/fields/Data_Subject_Notice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Data_Subject_Notice_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>员工通知已发送</label>
    <type>Checkbox</type>
</CustomField>