force-app/main/default/objects/Case/fields/Declined_Count__c.field-meta.xml
<CustomField>
    <fullName>Declined_Count__c</fullName>
    <label>Declined数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>