force-app/main/default/objects/Case/fields/Delivery_Channel__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Channel__c</fullName>
    <label>交付渠道</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SFTP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>