force-app/main/default/objects/Case/fields/Delivery_Evidence_Notes__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Evidence_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>交付留痕说明</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>