force-app/main/default/objects/Case/fields/Early_Warning_Date__c.field-meta.xml
<CustomField>
    <fullName>Early_Warning_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>提前预警日期</label>
    <type>Date</type>
</CustomField>