force-app/main/default/objects/Case/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>异常类型</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>File Validation</fullName>
            </value>
            <value>
                <fullName>Unauthorized Consent</fullName>
            </value>
            <value>
                <fullName>Unmatched Authorization</fullName>
            </value>
            <value>
                <fullName>Match Failed</fullName>
            </value>
            <value>
                <fullName>Reminder Review</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>