force-app/main/default/objects/Case/fields/First_Detected_At__c.field-meta.xml
<CustomField>
    <fullName>First_Detected_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>首次发现时间</label>
    <type>DateTime</type>
</CustomField>