force-app/main/default/objects/Case/fields/Last_Reminder_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Reminder_Sent_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>最近提醒发送时间</label>
    <type>DateTime</type>
</CustomField>