force-app/main/default/objects/Case/fields/No_Action_Count__c.field-meta.xml
<CustomField>
    <fullName>No_Action_Count__c</fullName>
    <label>No Action数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>