force-app/main/default/objects/Case/fields/Offline_Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Offline_Processing_Status__c</fullName>
    <label>线下处理状态</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AS400 Processing</fullName>
            </value>
            <value>
                <fullName>Packaged</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>