force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Legacy Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GC1040</fullName>
                <label>Legacy - GC1040</label>
            </value>
            <value>
                <fullName>GC1060</fullName>
                <label>Legacy - GC1060</label>
            </value>
            <value>
                <fullName>GC3020</fullName>
                <label>Legacy - GC3020</label>
            </value>
            <value>
                <fullName>GC3040</fullName>
                <label>Legacy - GC3040</label>
            </value>
            <value>
                <fullName>GC3060</fullName>
                <label>Legacy - GC3060</label>
            </value>
            <value>
                <fullName>GC5020</fullName>
                <label>Legacy - GC5020</label>
            </value>
            <value>
                <fullName>GC5040</fullName>
                <label>Legacy - GC5040</label>
            </value>
            <value>
                <fullName>GC5060</fullName>
                <label>Legacy - GC5060</label>
            </value>
            <value>
                <fullName>GC1020</fullName>
                <label>Legacy - GC1020</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>