force-app/main/default/objects/Case/fields/Related_Consent__c.field-meta.xml
<CustomField>
    <fullName>Related_Consent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>关联Consent</label>
    <referenceTo>Consent__c</referenceTo>
    <relationshipLabel>Cases (Related Consent)</relationshipLabel>
    <relationshipName>Related_Consent_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>