force-app/main/default/objects/Case/fields/Related_Consent_Request_Item__c.field-meta.xml
<CustomField>
    <fullName>Related_Consent_Request_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Consent Request Item</label>
    <referenceTo>Consent_Request_Item__c</referenceTo>
    <relationshipLabel>Cases (Related Consent Request Item)</relationshipLabel>
    <relationshipName>Related_Consent_Item_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>