force-app/main/default/objects/Case/fields/Related_Data_Subject__c.field-meta.xml
<CustomField>
    <fullName>Related_Data_Subject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>关联Data Subject</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Related Data Subject)</relationshipLabel>
    <relationshipName>Related_Data_Subject_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>