force-app/main/default/objects/Case/fields/Reminder_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Review_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>提醒复核日期</label>
    <type>Date</type>
</CustomField>