force-app/main/default/objects/Case/fields/Requested_Count__c.field-meta.xml
<CustomField>
    <fullName>Requested_Count__c</fullName>
    <label>选中人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>