force-app/main/default/objects/Case/fields/Resolved_At__c.field-meta.xml
<CustomField>
    <fullName>Resolved_At__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>解决时间</label>
    <type>DateTime</type>
</CustomField>