force-app/main/default/objects/Case/fields/Source_Report__c.field-meta.xml
<CustomField>
    <fullName>Source_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Report</label>
    <referenceTo>Reports__c</referenceTo>
    <relationshipLabel>Related Cases</relationshipLabel>
    <relationshipName>Related_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>