force-app/main/default/objects/Case/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Submitted Cases</relationshipLabel>
    <relationshipName>Submitted_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>