force-app/main/default/objects/Case/fields/Submitted_Count__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Count__c</fullName>
    <label>上传总人数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>