force-app/main/default/objects/Case/fields/Uploaded_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Uploaded_File_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>上传文件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>