force-app/main/default/objects/Case/fields/Valid_Consent_Count__c.field-meta.xml
<CustomField>
    <fullName>Valid_Consent_Count__c</fullName>
    <label>有效Consent数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>