force-app/main/default/objects/Case/fields/Withdrawn_Count__c.field-meta.xml
<CustomField>
    <fullName>Withdrawn_Count__c</fullName>
    <label>Withdrawn数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>