force-app/main/default/objects/Case/recordTypes/CBS_Consent.recordType-meta.xml
<RecordType>
    <fullName>CBS_Consent</fullName>
    <active>true</active>
    <businessProcess>CBS_Service_Cloud</businessProcess>
    <label>CBS Consent Request</label>
</RecordType>