force-app/main/default/objects/Case/recordTypes/CBS_Report_Request.recordType-meta.xml
<RecordType>
    <fullName>CBS_Report_Request</fullName>
    <active>true</active>
    <businessProcess>CBS_Service_Cloud</businessProcess>
    <label>CBS Report Request</label>
</RecordType>