force-app/main/default/objects/Case/listViews/CBS_Processing_Queue_Case.listView-meta.xml
<ListView>
    <fullName>CBS_Processing_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CBS Processing Queue</label>
    <queue>CBS_Processing_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>